# Open-insurance-core

./: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.all-in-one  Dockerfile.dev  Plan.md  README.md  docker-compose.yml
crates/core_kernel/: Cargo.toml
crates/core_kernel/src/: error.rs  identifiers.rs  lib.rs  money.rs  ports.rs  registry.rs  temporal.rs
crates/core_kernel/tests/: error_tests.rs  identifiers_tests.rs  money_tests.rs  temporal_tests.rs
crates/domain_billing/: Cargo.toml
crates/domain_billing/src/: account.rs  error.rs  invoice.rs  ledger.rs  lib.rs  payment.rs  transaction.rs
crates/domain_billing/tests/: billing_tests.rs
crates/domain_claims/: Cargo.toml
crates/domain_claims/src/: adjudication.rs  claim.rs  error.rs  lib.rs  payment.rs  reserve.rs  workflow.rs
crates/domain_claims/tests/: claims_tests.rs
crates/domain_fund/: Cargo.toml
crates/domain_fund/src/: allocation.rs  error.rs  fund.rs  lib.rs  nav.rs  unit_holding.rs  unit_transaction.rs
crates/domain_fund/tests/: fund_tests.rs
crates/domain_party/: Cargo.toml
crates/domain_party/src/: address.rs  agent.rs  error.rs  kyc.rs  lib.rs  party.rs  ports.rs  validation.rs
crates/domain_party/src/adapters/: external_crm.rs  mod.rs
crates/domain_party/tests/: party_tests.rs
crates/domain_policy/: Cargo.toml
crates/domain_policy/src/: aggregate.rs  coverage.rs  endorsement.rs  error.rs  events.rs  lib.rs  premium.rs  rules_engine.rs  services.rs  underwriting.rs
crates/domain_policy/tests/: additional_tests.rs  aggregate_tests.rs  coverage_tests.rs  events_tests.rs  policy_tests.rs  premium_tests.rs  services_tests.rs
crates/infra_db/: Cargo.toml
crates/infra_db/src/: bitemporal.rs  error.rs  lib.rs  pool.rs
crates/infra_db/src/adapters/: mod.rs  party.rs
crates/infra_db/src/repositories/: billing.rs  claims.rs  fund.rs  mod.rs  party.rs  policy.rs
crates/interface_api/: Cargo.toml
crates/interface_api/src/: auth.rs  config.rs  error.rs  lib.rs  middleware.rs
crates/interface_api/src/dto/: claims.rs  fund.rs  mod.rs  party.rs  policy.rs
crates/interface_api/src/handlers/: claims.rs  fund.rs  health.rs  mod.rs  party.rs  policy.rs
crates/test_utils/: Cargo.toml
crates/test_utils/src/: assertions.rs  builders.rs  database.rs  fixtures.rs  generators.rs  lib.rs
migrations/: 20240101_000001_initial_schema.sql  20240102_000001_party_composition.sql
products/: catalog.json  critical_illness.json  term_life.json  whole_life.json
scripts/: dev-entrypoint.sh  docker-entrypoint.sh  run-tests.sh
tests/: integration_tests.rs
