[package]
name = "core_kernel"
description = "Core types and utilities for the insurance system - Money, Time, and common abstractions"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
