[package]
name = "domain_claims"
description = "Claims management domain - FNOL, adjudication, reserving, and settlement"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
core_kernel = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
