[package]
name = "domain_party"
description = "Party management domain - customers, agents, KYC, and relationships"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
core_kernel = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }
fluent = { workspace = true }
unic-langid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
