[package]
name = "interface_api"
description = "HTTP API layer using Axum with authentication, authorization, and audit logging"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "insurance-api"
path = "src/bin/server.rs"

[dependencies]
# Internal crates
core_kernel = { workspace = true }
infra_db = { workspace = true }
domain_policy = { workspace = true }
domain_billing = { workspace = true }
domain_fund = { workspace = true }
domain_claims = { workspace = true }
domain_party = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# Date/Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Auth
jsonwebtoken = { workspace = true }

# Validation
validator = { workspace = true }

# Config
config = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
